<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout">

    <!-- Main Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_background"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="center_horizontal">

            <!-- Header (Logo + Title) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/drawer"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/drawer"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:focusable="true" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="200dp"
                    android:layout_height="180dp"
                    android:src="@drawable/logo"
                    android:layout_marginBottom="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/purple"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_your_account"
                    android:textColor="@color/purple"
                    android:textSize="16sp"
                    android:layout_marginBottom="24dp" />
            </LinearLayout>

            <!-- Input Fields -->
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/name"
                android:background="@drawable/rounded_input_bg"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="17sp"
                android:textColorHint="@color/purple"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="16dp"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/phone_number"
                android:background="@drawable/rounded_input_bg"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColorHint="@color/purple"
                android:textSize="17sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="16dp"
                android:inputType="phone" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:background="@drawable/rounded_input_bg"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColorHint="@color/purple"
                android:textSize="17sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:inputType="textPassword"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/sign_up"
                android:backgroundTint="@color/purple"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_input_bg" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/google_signup"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/google"
                    android:layout_marginEnd="16dp" />

                <ImageView
                    android:id="@+id/facebook_signup"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/facebook"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="16dp" />

                <ImageView
                    android:id="@+id/twitter_signup"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/twitter"
                    android:layout_marginStart="15dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account_login"
                android:textSize="16sp"
                android:layout_marginTop="0dp"
                android:textColor="@color/purple"
                android:layout_gravity="center" />
        </LinearLayout>
    </ScrollView>

    <!-- Side Drawer Content -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/purple"
        android:layout_gravity="start">

        <!-- Close Button -->
        <ImageView
            android:id="@+id/close_drawer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/x"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true" />

        <!-- Check Card Balance -->
        <LinearLayout
            android:id="@+id/check_balance_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/card_1_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/card_1" />

            <TextView
                android:id="@+id/check_balance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Check your card balance"
                android:textSize="16sp"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <!-- Separator Line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_orange_light" />

        <!-- About -->
        <LinearLayout
            android:id="@+id/about_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/info_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="About"
                android:textSize="16sp"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
